--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,11 +1,12 @@
 .Logo{
     background-color:white;
-    padding:8px;
-    height:80%;
+    padding:5px;
+    height:100%;
     /* box-sizing: border-box; */
     border-radius: 5px;
 }
 
 .Logo img{
     height:100%;
+    width:50px;
 }
