--- a/src/components/Navigation/SideDrawer/Hamburger/Hamburger.module.css
+++ b/src/components/Navigation/SideDrawer/Hamburger/Hamburger.module.css
@@ -2,9 +2,11 @@
     height:100%;    
     display:flex;
     align-items: center;
+   
 }
 
 .Hamburger img{
     height:80%;
-    border-radius: 5px;    
+    border-radius: 5px; 
+    width:50px   
 }
