--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -19,10 +19,19 @@
 
 .Logo{
     height:80%;
+    display:flex;    
+    align-items: center;    
+}
+.MobileOnly{
+    display:none;
 }
 
 @media (max-width: 499px){
     .DesktopOnly{
         display:none;
+    }
+    .MobileOnly{
+        height:100%;
+        display:flex;        
     }
 }
