--- a/src/components/Order/CheckoutSummary/CheckoutSummary.module.css
+++ b/src/components/Order/CheckoutSummary/CheckoutSummary.module.css
@@ -1,12 +1,13 @@
 .CheckoutSummary {
   text-align: center;
   width: 80%;
+
   margin: auto;
   /* border:1px solid green; */
 }
-
+/* 
 @media (min-width: 600px) {
   .CheckoutSummary{
     width: 500px;
   }
-}
+} */
